@@ -29,6 +29,7 @@ Bugs fixed:
 - 1730915 Fixed getInstance fails for associations
 - 1734174 Fixed sfcb behaves different when assocclass & resultclass unknown
 - 1741211 Fixed cleanup compiler warnings
+- 1698462 Fixed upcall with empty parameter list crash
 
 
 Changes in 1.2.2
